# bitwarden-lambda-automation-poc

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
diagrams/: sequence
src/: main.rs
