[package]
name = "bitwarden-rs"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.55.0"
aws-sdk-secretsmanager = "0.25.0"
base64 = "0.21.0"
lambda_runtime = "0.7"
oauth2 = "4.3.0"
reqwest = { version = "0.11.16", features = ["json"] }
serde = "1.0.159"
serde_json = "1.0.95"
strip-ansi-escapes = "0.1.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[dev-dependencies]
dotenvy = "0.15.7"
mocktopus = "0.8.0"
